welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:5: error: too many arguments for method gauche: ()Unit
		gauche(2);
                      ^Runner:6: error: too many arguments for method droite: ()Unit
		droite(4);
                      ^Runner:7: error: too many arguments for method droite: ()Unit
		droite(2);
                      ^Runner:8: error: too many arguments for method gauche: ()Unit
		gauche(4);
                      ^