welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
for (x<- 1 to 4) {
	for (x<-1 to 4) {
		avance(4);
		gauche(2);
		droite(4);
		droite(2);
		gauche(4);
	}
}
